--- a/Project.toml
+++ b/Project.toml
@@ -3,4 +3,6 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 MLDataUtils = "cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 MLJ = "add582a8-e3ab-11e8-2d5e-e98b27df1bc7"
+MLJFlux = "094fc8d1-fd35-5302-93ea-dabda2abf845"
 MLPreprocessing = "270893ea-b48f-5b4f-bac8-adb34c91318c"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
